crates/rome_js_formatter/tests/specs/prettier/js/destructuring-private-fields/async-arrow-params.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class C {
  #x = 1;
  #p = async ({ #x: x }) => {}
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,4 +1,6 @@
 class C {
   #x = 1;
-  #p = async ({ #x: x }) => {};
+  #p = async ({ #x: x })
+  => {
+}
 }
```

# Output

```js
class C {
  #x = 1;
  #p = async ({ #x: x })
  => {
}
}
```


# Errors
```
error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '#x'
  ┌─ async-arrow-params.js:3:17
  │
3 │   #p = async ({ #x: x }) => {}
  │                 ^^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected `,` but instead found `:`
  ┌─ async-arrow-params.js:3:19
  │
3 │   #p = async ({ #x: x }) => {}
  │                   ^ unexpected

error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ async-arrow-params.js:3:3
  │
3 │   #p = async ({ #x: x }) => {}
  │   ^^^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '=>'
  ┌─ async-arrow-params.js:3:26
  │
3 │   #p = async ({ #x: x }) => {}
  │                          ^^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a statement but instead found '}'
  ┌─ async-arrow-params.js:4:1
  │
4 │ }
  │ ^ Expected a statement here


```


